--- a/stylesheets/first.css
+++ b/stylesheets/first.css
@@ -19,14 +19,14 @@ nav ul {
 
 h1 {
   font-family: "Courier";
-  background-color: ;#878787;
+  background-color: #878787;
   border: 5px;
   margin: 0;
   text-align: center;
 }
 h3 {
   font-family: "Courier";
-  background-color: ;#878787;
+  background-color: #878787;
   margin: 0;
   text-align: center;
 }
