--- a/stylesheets/first.css
+++ b/stylesheets/first.css
@@ -1,5 +1,8 @@
 /* Styles go here */
 
+body {
+  background href:("http://vignette3.wikia.nocookie.net/koror-blog-org/images/6/6e/Black_and_White_Beach_Landscape_Wallpaper_HD_(12).jpg/revision/latest?cb=20140908031733");
+}
 
 nav {
   display: inline;
