--- a/stylesheets/first.css
+++ b/stylesheets/first.css
@@ -1,10 +1,5 @@
 /* Styles go here */
 
-body {
-  background-image:url("http://vignette3.wikia.nocookie.net/koror-blog-org/images/6/6e/Black_and_White_Beach_Landscape_Wallpaper_HD_(12).jpg/revision/latest?cb=20140908031733");
-  width: 800;
-  height:: 600;
-}
 
 nav {
   display: inline;
@@ -40,4 +35,9 @@ h3 {
 .gallery-complete {
   display: flex;
   flex-wrap: wrap;
+}
+.gallery-complete {
+  background-image:url("http://vignette3.wikia.nocookie.net/koror-blog-org/images/6/6e/Black_and_White_Beach_Landscape_Wallpaper_HD_(12).jpg/revision/latest?cb=20140908031733");
+  width: 800;
+  height:: 600;
 }
