--- a/stylesheets/first.css
+++ b/stylesheets/first.css
@@ -21,7 +21,7 @@ h1 {
   font-family: "Courier";
   color: #4a4943;
   background-color: #BEBEBE;
-  border: 5px solid black;
+  border: 5px solid #ffffff;
   margin: 0;
   text-align: center;
 }
