--- a/stylesheets/first.css
+++ b/stylesheets/first.css
@@ -23,6 +23,7 @@ nav ul {
 
 h1 {
   font-family: "Courier";
+  font-size: 80px;
   color: #4a4943;
   background-color: #BEBEBE;
   border: 5px solid #ffffff;
