--- a/stylesheets/first.css
+++ b/stylesheets/first.css
@@ -34,7 +34,7 @@ h3 {
   font-family: "Courier";
   color: #4a4943;
   background-color: #BEBEBE;
-  margin: 0;
+  margin: 10px;
   text-align: center;
 }
 .gallery-complete {
