--- a/stylesheets/first.css
+++ b/stylesheets/first.css
@@ -35,6 +35,7 @@ h3 {
   color: #4a4943;
   background-color: #BEBEBE;
   margin: 10px;
+  padding: 5px;
   text-align: center;
 }
 .gallery-complete {
