--- a/stylesheets/first.css
+++ b/stylesheets/first.css
@@ -1,7 +1,7 @@
 /* Styles go here */
 body {
   background-image:url("http://vignette3.wikia.nocookie.net/koror-blog-org/images/6/6e/Black_and_White_Beach_Landscape_Wallpaper_HD_(12).jpg/revision/latest?cb=20140908031733");
-background-size: cover;
+background-size: contain;
 }
 
 nav {
@@ -17,6 +17,7 @@ nav ul {
   display: inline;
   position: relative;
   top: 2px;
+  text-align: right;
   }
 
 h1 {
