--- a/stylesheets/first.css
+++ b/stylesheets/first.css
@@ -1,10 +1,5 @@
 /* Styles go here */
-body {
-  background-image:url("http://vignette3.wikia.nocookie.net/koror-blog-org/images/6/6e/Black_and_White_Beach_Landscape_Wallpaper_HD_(12).jpg/revision/latest?cb=20140908031733");
-  height: 800;
-  width: 200;
-}
-
+body	{ background:url(http://vignette3.wikia.nocookie.net/koror-blog-org/images/6/6e/Black_and_White_Beach_Landscape_Wallpaper_HD_(12).jpg/revision/latest?cb=20140908031733) top right no-repeat; background-attachment:fixed; }
 nav {
   display: inline;
   color: #ffffff;
