--- a/stylesheets/first.css
+++ b/stylesheets/first.css
@@ -2,7 +2,8 @@
 body	{ 
   background:url("http://vignette3.wikia.nocookie.net/koror-blog-org/images/6/6e/Black_and_White_Beach_Landscape_Wallpaper_HD_(12).jpg/revision/latest?cb=20140908031733");
   top right no-repeat; 
-  background-attachment:fixed; 
+  background-attachment:fixed;
+  background-size: 100%;
 }
 nav {
   display: inline;
