--- a/stylesheets/first.css
+++ b/stylesheets/first.css
@@ -3,7 +3,9 @@ body	{
   background:url("http://vignette3.wikia.nocookie.net/koror-blog-org/images/6/6e/Black_and_White_Beach_Landscape_Wallpaper_HD_(12).jpg/revision/latest?cb=20140908031733");
   top right no-repeat; 
   background-attachment:fixed;
-  background-size: 80%;
+  width: 80%;
+  height: 100%;
+  position: center;
 }
 nav {
   display: inline;
