--- a/stylesheets/first.css
+++ b/stylesheets/first.css
@@ -5,6 +5,7 @@ body	{
   background-attachment:fixed;
   background-size: 80%;
   background-position: center;
+  padding: #4a4943;
 }
 nav {
   display: inline;
