--- a/stylesheets/first.css
+++ b/stylesheets/first.css
@@ -46,10 +46,14 @@ h3 {
   flex-wrap: wrap;
 }
 .container {
+  text-align: center;
   height:300px;
   width: 150px;
   border: 5px #ffffff solid;
   margin: auto;
   repeat: no-repeat;
 }
-
+a {
+  color: #ffffff;
+  
+}
