--- a/stylesheets/first.css
+++ b/stylesheets/first.css
@@ -47,6 +47,7 @@ h3 {
 }
 .container {
   text-align: center;
+  vertical-align: middle;
   height:300px;
   width: 150px;
   border: 5px #ffffff solid;
