--- a/stylesheets/first.css
+++ b/stylesheets/first.css
@@ -47,7 +47,8 @@ h3 {
 }
 .container {
   text-align: center;
-  vertical-align: middle;
+  display: flex;
+  align-items: center;
   height:300px;
   width: 150px;
   border: 5px #ffffff solid;
