--- a/stylesheets/first.css
+++ b/stylesheets/first.css
@@ -49,6 +49,7 @@ h3 {
   text-align: center;
   display: flex;
   align-items: center;
+  justify-content: center;
   height:300px;
   width: 150px;
   border: 5px #ffffff solid;
