--- a/stylesheets/first.css
+++ b/stylesheets/first.css
@@ -19,7 +19,7 @@ nav ul {
   font-family: "Courier";
   display: inline;
   position: absolute;
-  top: 2px;
+  top: 0;
   right: 0;
   text-align: right;
   }
