--- a/stylesheets/first.css
+++ b/stylesheets/first.css
@@ -32,6 +32,8 @@ h1 {
   border: 5px solid #ffffff;
   margin: 0;
   text-align: center;
+  position: absolute;
+  top: .5em;
 }
 h3 {
   font-family: "Courier";
